niagara/output.txt
niagara.cpp: In member function ‘bool Niagara::check_identifier(str)’:
niagara.cpp:407:17: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  407 |   for (char c : identifier) {
      |                 ^~~~~~~~~~
      |                 std::begin
In file included from /usr/include/c++/12/string:52,
                 from niagara.h:14,
                 from niagara.cpp:1:
/usr/include/c++/12/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
niagara.cpp:407:17: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  407 |   for (char c : identifier) {
      |                 ^~~~~~~~~~
      |                 std::end
/usr/include/c++/12/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
